--- a/asset/settings.json
+++ b/asset/settings.json
@@ -5,5 +5,6 @@
   "speech_rate": 150,
   "voice_name": "Microsoft Zira Desktop - English (United States)",
   "volume": 1.0,
-  "show_ipa": true
+  "show_ipa": true,
+  "auto_startup": false
 }
